--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Button test</title>
+	<title>LOGIN!</title>
 </head>
 <style>
 	@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200,900');
