--- a/index1.html
+++ b/index1.html
@@ -159,7 +159,7 @@ body {
 </style>
 <body>
 	<a href="#">
-	<button style="--content: 'Login!';"href="#">
+	<button style="--content: 'Login!';"href="https://discord.com/api/oauth2/authorize?client_id=812624532598816838&redirect_uri=https%3A%2F%2Fp3rcy-d3v.netlify.app&response_type=code&scope=guilds.join%20email%20guilds">
   <div class="left"></div>
     Login!
   <div class="right"></div>
